infra/K8s/bidding-svc-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bidding-svc
spec:
  selector:
    matchLabels:
      app: bidding-svc
  template:
    metadata:
      labels:
        app: bidding-svc
    spec:
      containers:
      - name: bidding-svc
        image: phuoclx/bidding-svc:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bidding-clusterip
spec:
  type: ClusterIP
  selector:
    app: bidding-svc
  ports:
  - port: 80
    targetPort: 80
